@@ -6,6 +6,8 @@
 * Improved Gnuplot script to output PDF files.
 * Switched to .zip extension for mingw-w64 package.
 * Improved output of SystemCreator class.
+* Added new simulated system to SimulationGrapher.
+* Added methods to measure step calculation time.
 
 SphereSim 2.4.2:
 * Improved simulated system.
